<resources>
    <string name="app_name">寻找淘女郎</string>

    <!-- HomeActivity -->
    <string name="style_all">全部</string>
    <string name="mm_real_name">真实姓名</string>
    <string name="mm_height_weight">身高/体重</string>
    <string name="mm_fans_favor">粉丝/关注</string>
    <string name="mm_city">所在城市</string>
    <string name="mm_enter_chat">TA的房间</string>
    <string name="mm_check_images">TA的相册</string>
</resources>
