<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_item_mm"
    android:background="@color/color_base_sub_background">

    <ImageView
        android:id="@+id/mm_avatar"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:scaleType="centerInside"
        android:src="@drawable/splash_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mm_real_name"
                android:textSize="14sp"
                android:textColor="@color/color_base_title" />

            <TextView
                android:id="@+id/mm_real_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="14sp"
                android:textColor="@color/color_base_subtitle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mm_city"
                android:textSize="14sp"
                android:textColor="@color/color_base_title" />

            <TextView
                android:id="@+id/mm_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="14sp"
                android:textColor="@color/color_base_subtitle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mm_height_weight"
                android:textSize="14sp"
                android:textColor="@color/color_base_title" />

            <TextView
                android:id="@+id/mm_height_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="14sp"
                android:textColor="@color/color_base_subtitle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mm_fans_favor"
                android:textSize="14sp"
                android:textColor="@color/color_base_title" />

            <TextView
                android:id="@+id/mm_fans_favor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="14sp"
                android:textColor="@color/color_base_subtitle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mm_enter_chat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button_pink"
                android:text="@string/mm_enter_chat"
                android:layout_marginRight="10dp"
                android:textSize="14sp"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/mm_check_images"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:background="@drawable/selector_button_blue"
                android:text="@string/mm_check_images"
                android:textSize="14sp"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>